...
    case tolls
    case unpaved

    var label: String {
      switch self {
      case .ferries: "Avoid ferries"
      case .highways: "Avoid highways"
      case .tolls: "Avoid tolls"
      case .unpaved: "Avoid unpaved roads"
      }
    }

    var systemImageName: String {
...
