appId: org.navoss.mobile
---
- launchApp
- tapOn: 'Search Calgary'
- eraseText
- inputText: 'Airport'
- assertVisible: 'Select Calgary International Airport.*'
- tapOn: 'Select Calgary International Airport.*'
- extendedWaitUntil:
    visible: 'Directions'
    timeout: 10000
- tapOn: 'Directions'
- extendedWaitUntil:
    visible: 'Start navigation'
    timeout: 20000
- assertVisible: 'Route preview'
- assertVisible: '.*min'
- tapOn: 'Start navigation'
- assertVisible: 'End navigation'
- assertVisible: 'Share ETA'
- tapOn: 'End navigation'
- assertVisible: 'Route preview'
