appId: org.navoss.mobile
---
- launchApp
- tapOn: 'Search Calgary'
- eraseText
- inputText: 'University'
- assertVisible: 'Select University of Calgary.*'
- tapOn: 'Select University of Calgary.*'
- extendedWaitUntil:
    visible: 'Directions'
    timeout: 10000
- tapOn: 'Directions'
- extendedWaitUntil:
    visible: 'Start navigation'
    timeout: 20000
- tapOn: 'Avoid highways'
- extendedWaitUntil:
    visible: 'Start navigation'
    timeout: 20000
- assertVisible: 'Avoid highways'
- assertVisible: 'No live traffic'
- assertVisible: 'Select .* route, 8.2 km, via Memorial Drive NW / University Drive NW'
